# bdir-engine

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
crates/bdir-cli/: Cargo.toml
crates/bdir-cli/src/: main.rs
crates/bdir-cli/tests/: cli_apply_patch_document.rs  cli_apply_patch_editpacket.rs  cli_document_missing_fields.rs  cli_document_unsupported_hash_algorithm.rs  cli_golden_stdout.rs  cli_inspect.rs  cli_large_fixture_stress.rs  cli_validate_patch_exitcodes.rs
crates/bdir-cli/tests/fixtures/large-document/: README.md  (+1 more)
crates/bdir-io/: Cargo.toml  README.md
crates/bdir-io/src/: canonical_json.rs  document_json.rs  hashing.rs  lib.rs  version.rs
crates/bdir-io/tests/: canonical_json_hashing.rs  golden_editpacket_json.rs  rfc_schema_conformance.rs  smoke_patch_validate_apply.rs
crates/bdir-patch/: Cargo.toml  README.md
crates/bdir-patch/src/: apply.rs  canonicalize.rs  diagnostics.rs  edit_packet.rs  lib.rs  schema.rs  telemetry.rs  validate.rs
crates/bdir-patch/tests/: apply_document_smoke.rs  apply_editpacket_golden.rs  canonicalize_golden.rs  canonicalize_ops.rs  conformance_matrix.rs  property_apply_editpacket.rs  unicode_nfc.rs  util.rs  validator_editpacket_strict.rs  validator_golden.rs  validator_kindcode_policy.rs
crates/bdir-patch/tests/fixtures/: canonicalize_expected.patch.json  canonicalize_unordered.patch.json  patch.before_not_found.json  patch.before_too_short.json  patch.delete_missing_occurrence.json  patch.delete_missing_occurrence_ambiguous.json  patch.extra_field.json  patch.page_hash_mismatch.json  patch.replace_missing_after.json  patch.suggest_empty_message.json  patch.suggest_with_before.json  patch.unknown_block.json  patch.unsupported_version.json  patch.valid.json
(+39 files in other folders)
