[package]
name = "bdir-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bdir"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
bdir-io = { path = "../bdir-io" }
anyhow = "1"
assert_cmd = "2.1.2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3"
