[package]
name = "bdir-io"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compose the existing protocol crates behind a single public entrypoint.
bdir-core = { path = "../bdir-core" }
bdir-editpacket = { path = "../bdir-editpacket" }
bdir-patch = { path = "../bdir-patch" }

[dev-dependencies]
anyhow = "1"