[package]
name = "bdir-patch"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bdir-core = { path = "../bdir-core" }
bdir-editpacket = { path = "../bdir-editpacket" }
bdir-codebook = { path = "../bdir-codebook" }


[dev-dependencies]
proptest = "1"
